seafile/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile
  namespace: app-internal
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infrastructure
      sectionName: websecure
  hostnames:
    - "files.mikey-liang.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Proto
                value: https
              - name: X-Forwarded-Host
                value: files.mikey-liang.com
      backendRefs:
        - name: seafile
          port: 80
